[package]
name = "scrapesol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["cookies", "json"] }
scraper = { version = "0.12" }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
